<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Volta</string>
    <string name="service_unavailable_popup">Accessibility service unavailable</string>
    <string name="track">Track</string>
    <string name="track_description">Long press Volume Up/Down</string>
    <string name="double_up">Double Up</string>
    <string name="double_up_description">Double press Volume Up</string>
    <string name="double_down">Double Down</string>
    <string name="double_down_description">Double press Volume Down</string>
    <string name="prominent_disclosure_title">Prominent Disclosure</string>
    <string name="prominent_disclosure_message">The app uses accessibility service to receive volume key events. It can add action on long and/or double volume button press.</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
    <string name="main">Main</string>
    <string name="mode">Mode:</string>
    <string name="flashlight">Flashlight</string>
    <string name="broadcast">Broadcast</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_description">Vibrate on action complete.</string>
    <string name="action">action*</string>
    <string name="receiver">receiver</string>
    <string name="extra_key">extra key</string>
    <string name="extra_value">extra value</string>
    <string name="settings">Settings</string>
    <string name="track_long_press_duration_hint">long press duration</string>
    <string name="settings_double_press_duration_hint">double press duration</string>
    <string name="settings_vibe_duration_hint">vibe duration</string>
    <string name="settings_torch_disable_delay_hint">flashlight disable minutes</string>
</resources>